// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 format[babel] 1`] = `
"\`import()\` requires exactly one or two arguments. (1:1)
> 1 | import();
    | ^
Cause: \`import()\` requires exactly one or two arguments. (1:0)"
`;

exports[`snippet: #0 format[babel-ts] 1`] = `
"\`import()\` requires exactly one or two arguments. (1:1)
> 1 | import();
    | ^
Cause: \`import()\` requires exactly one or two arguments. (1:0)"
`;

exports[`snippet: #0 format[flow] 1`] = `
"Unexpected token \`)\` (1:8)
> 1 | import();
    |        ^
Cause: Unexpected token \`)\` (1:7)"
`;

exports[`snippet: #0 format[meriyah] 1`] = `
"Unexpected token: ')' (1:8)
> 1 | import();
    |        ^
Cause: [1:7-1:8]: Unexpected token: ')'"
`;

exports[`snippet: #0 format[oxc] 1`] = `
"import() requires a specifier. (1:1)
> 1 | import();
    | ^^^^^^^^"
`;

exports[`snippet: #0 format[oxc-ts] 1`] = `
"import() requires a specifier. (1:1)
> 1 | import();
    | ^^^^^^^^"
`;

exports[`snippet: #0 format[typescript] 1`] = `
"Dynamic import requires exactly one or two arguments. (1:1)
> 1 | import();
    | ^^^^^^^^
Cause: Dynamic import requires exactly one or two arguments."
`;

exports[`snippet: #0 format[yuku] 1`] = `
"Unexpected token ')' (1:8)
> 1 | import();
    |        ^"
`;

exports[`snippet: #0 format[yuku-ts] 1`] = `
"Unexpected token ')' (1:8)
> 1 | import();
    |        ^"
`;

exports[`snippet: #1 format[babel] 1`] = `
"\`import()\` requires exactly one or two arguments. (1:1)
> 1 | import(/* comment */);
    | ^
Cause: \`import()\` requires exactly one or two arguments. (1:0)"
`;

exports[`snippet: #1 format[babel-ts] 1`] = `
"\`import()\` requires exactly one or two arguments. (1:1)
> 1 | import(/* comment */);
    | ^
Cause: \`import()\` requires exactly one or two arguments. (1:0)"
`;

exports[`snippet: #1 format[flow] 1`] = `
"Unexpected token \`)\` (1:21)
> 1 | import(/* comment */);
    |                     ^
Cause: Unexpected token \`)\` (1:20)"
`;

exports[`snippet: #1 format[meriyah] 1`] = `
"Unexpected token: ')' (1:21)
> 1 | import(/* comment */);
    |                     ^
Cause: [1:20-1:21]: Unexpected token: ')'"
`;

exports[`snippet: #1 format[oxc] 1`] = `
"import() requires a specifier. (1:1)
> 1 | import(/* comment */);
    | ^^^^^^^^^^^^^^^^^^^^^"
`;

exports[`snippet: #1 format[oxc-ts] 1`] = `
"import() requires a specifier. (1:1)
> 1 | import(/* comment */);
    | ^^^^^^^^^^^^^^^^^^^^^"
`;

exports[`snippet: #1 format[typescript] 1`] = `
"Dynamic import requires exactly one or two arguments. (1:1)
> 1 | import(/* comment */);
    | ^^^^^^^^^^^^^^^^^^^^^
Cause: Dynamic import requires exactly one or two arguments."
`;

exports[`snippet: #1 format[yuku] 1`] = `
"Unexpected token ')' (1:21)
> 1 | import(/* comment */);
    |                     ^"
`;

exports[`snippet: #1 format[yuku-ts] 1`] = `
"Unexpected token ')' (1:21)
> 1 | import(/* comment */);
    |                     ^"
`;

exports[`snippet: #2 format[babel] 1`] = `
"Cannot use new with import(). (1:5)
> 1 | new import('./a.mjs');
    |     ^
Cause: Cannot use new with import(). (1:4)"
`;

exports[`snippet: #2 format[babel-ts] 1`] = `
"Cannot use new with import(). (1:5)
> 1 | new import('./a.mjs');
    |     ^
Cause: Cannot use new with import(). (1:4)"
`;

exports[`snippet: #2 format[flow] 1`] = `
"Unexpected token \`import\` (1:5)
> 1 | new import('./a.mjs');
    |     ^
Cause: Unexpected token \`import\` (1:4)"
`;

exports[`snippet: #2 format[meriyah] 1`] = `
"Cannot use new with import(...) (1:11)
> 1 | new import('./a.mjs');
    |           ^
Cause: [1:10-1:11]: Cannot use new with import(...)"
`;

exports[`snippet: #2 format[oxc] 1`] = `
"Cannot use new with dynamic import (1:5)
> 1 | new import('./a.mjs');
    |     ^^^^^^^^^^^^^^^^^"
`;

exports[`snippet: #2 format[oxc-ts] 1`] = `
"Cannot use new with dynamic import (1:5)
> 1 | new import('./a.mjs');
    |     ^^^^^^^^^^^^^^^^^"
`;

exports[`snippet: #2 format[typescript] 1`] = `
"Expression expected. (1:5)
> 1 | new import('./a.mjs');
    |     ^
Cause: Expression expected."
`;

exports[`snippet: #2 format[yuku] 1`] = `
"'import' is reserved and cannot be used as an identifier (1:5)
> 1 | new import('./a.mjs');
    |     ^^^^^^"
`;

exports[`snippet: #2 format[yuku-ts] 1`] = `
"'import' is reserved and cannot be used as an identifier (1:5)
> 1 | new import('./a.mjs');
    |     ^^^^^^"
`;

exports[`snippet: #3 format[babel] 1`] = `
"\`import()\` requires exactly one or two arguments. (1:5)
> 1 | new import();
    |     ^
Cause: \`import()\` requires exactly one or two arguments. (1:4)"
`;

exports[`snippet: #3 format[babel-ts] 1`] = `
"\`import()\` requires exactly one or two arguments. (1:5)
> 1 | new import();
    |     ^
Cause: \`import()\` requires exactly one or two arguments. (1:4)"
`;

exports[`snippet: #3 format[flow] 1`] = `
"Unexpected token \`import\` (1:5)
> 1 | new import();
    |     ^
Cause: Unexpected token \`import\` (1:4)"
`;

exports[`snippet: #3 format[meriyah] 1`] = `
"Cannot use new with import(...) (1:11)
> 1 | new import();
    |           ^
Cause: [1:10-1:11]: Cannot use new with import(...)"
`;

exports[`snippet: #3 format[oxc] 1`] = `
"import() requires a specifier. (1:5)
> 1 | new import();
    |     ^^^^^^^^"
`;

exports[`snippet: #3 format[oxc-ts] 1`] = `
"import() requires a specifier. (1:5)
> 1 | new import();
    |     ^^^^^^^^"
`;

exports[`snippet: #3 format[typescript] 1`] = `
"Expression expected. (1:5)
> 1 | new import();
    |     ^
Cause: Expression expected."
`;

exports[`snippet: #3 format[yuku] 1`] = `
"'import' is reserved and cannot be used as an identifier (1:5)
> 1 | new import();
    |     ^^^^^^"
`;

exports[`snippet: #3 format[yuku-ts] 1`] = `
"'import' is reserved and cannot be used as an identifier (1:5)
> 1 | new import();
    |     ^^^^^^"
`;

exports[`static-import-source-should-not-has-extra-token.js format[babel] 1`] = `
"Unexpected token (4:16)
  2 | // be parenthesized, that accidentally break #8016
  3 |
> 4 | import {} from (('a'));
    |                ^
  5 |
Cause: Unexpected token (4:15)"
`;

exports[`static-import-source-should-not-has-extra-token.js format[babel-ts] 1`] = `
"Unexpected token (4:16)
  2 | // be parenthesized, that accidentally break #8016
  3 |
> 4 | import {} from (('a'));
    |                ^
  5 |
Cause: Unexpected token (4:15)"
`;

exports[`static-import-source-should-not-has-extra-token.js format[flow] 1`] = `
"Unexpected token \`(\`, expected a string (4:16)
  2 | // be parenthesized, that accidentally break #8016
  3 |
> 4 | import {} from (('a'));
    |                ^
  5 |
Cause: Unexpected token \`(\`, expected a string (4:15)"
`;

exports[`static-import-source-should-not-has-extra-token.js format[meriyah] 1`] = `
"Import source must be string (4:16)
  2 | // be parenthesized, that accidentally break #8016
  3 |
> 4 | import {} from (('a'));
    |                ^
  5 |
Cause: [4:15-4:16]: Import source must be string"
`;

exports[`static-import-source-should-not-has-extra-token.js format[oxc] 1`] = `
"Unexpected token (4:16)
  2 | // be parenthesized, that accidentally break #8016
  3 |
> 4 | import {} from (('a'));
    |                ^
  5 |"
`;

exports[`static-import-source-should-not-has-extra-token.js format[oxc-ts] 1`] = `
"Unexpected token (4:16)
  2 | // be parenthesized, that accidentally break #8016
  3 |
> 4 | import {} from (('a'));
    |                ^
  5 |"
`;

exports[`static-import-source-should-not-has-extra-token.js format[typescript] 1`] = `
"Module specifier must be a string literal. (4:16)
  2 | // be parenthesized, that accidentally break #8016
  3 |
> 4 | import {} from (('a'));
    |                ^^^^^^^
  5 |
Cause: Module specifier must be a string literal."
`;

exports[`static-import-source-should-not-has-extra-token.js format[yuku] 1`] = `
"Expected module specifier, but found '(' (4:16)
  2 | // be parenthesized, that accidentally break #8016
  3 |
> 4 | import {} from (('a'));
    |                ^
  5 |"
`;

exports[`static-import-source-should-not-has-extra-token.js format[yuku-ts] 1`] = `
"Expected module specifier, but found '(' (4:16)
  2 | // be parenthesized, that accidentally break #8016
  3 |
> 4 | import {} from (('a'));
    |                ^
  5 |"
`;
